# QCron

./: .gitignore  .gitmodules  CMakeLists.txt  QCronJobDaemon.cpp  QCronJobDaemon.hpp  README.md  main.cpp
.github/workflows/: build-simpleplugin-qt6.yml  build-simpleplugin.yml
widgets/: QCronStringLineEdit.cpp  QCronStringLineEdit.hpp  QCronStringLineEdit.ui
widgets/common/: QCronJobObject.cpp  QCronJobObject.hpp
